--- a/scroll/package.json
+++ b/scroll/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.5.2",
+    "bcrypt": "^5.1.1",
     "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -22,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8.4.31",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
