configured database using prisma and fetcher

--- a/scroll/.env
+++ b/scroll/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://teja_BT:BT_mongo@cluster0.ub44bba.mongodb.net/scroll"
+NEXTAUTH_JWT_SECRET = 'NEXT_AUTH_JWT_SECRET' 
+NEXTAUTH_SECRET = 'NEXT_AUTH_SECRET'
