Updated Backend and added google authenticator and Magic text and comment translation functionality

--- a/scroll/.env
+++ b/scroll/.env
@@ -7,3 +7,16 @@
 DATABASE_URL="mongodb+srv://teja_BT:BT_mongo@cluster0.ub44bba.mongodb.net/scroll"
 NEXTAUTH_JWT_SECRET = 'NEXT_AUTH_JWT_SECRET' 
 NEXTAUTH_SECRET = 'NEXT_AUTH_SECRET'
+
+GOOGLE_CLIENT_ID=419932050879-v2278assojn78bk6c1d2d8vmequ72bl3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+AUTH0_SECRET = '234vc3423423454$&*##&$$$$$$$CXNC(XNNNNX#CN$CBNX####################MX$X(#&(&(&94374973cn4939xm93mx,))))'
+
+AUTH0_BASE_URL = 'http://localhost:3000'
+
+AUTH0_ISSUER_BASE_URL = 'https://dev-5mgn2csplsvjxcql.us.auth0.com'
+
+AUTH0_CLIENT_ID = 'vzd1mOwH3s9tDcYdcR0DzjawGrg6MJut';
+
+AUTH0_CLIENT_SECRET = 'N2Rjn1opqSvOLASLW57l6q1-_R7-X6ATjPIUP-7XH_QDKxNN22_tvkTvckcx2Khf'
